--- a/app/components/views/TransactionsPage/ReceiveTab/ReceivePage/ReceivePage.module.css
+++ b/app/components/views/TransactionsPage/ReceiveTab/ReceivePage/ReceivePage.module.css
@@ -1,7 +1,7 @@
 .receiveContent {
   background-color: var(--background-back-color);
   padding: 30px 40px;
-  width: 684px;
+  width: 764px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -187,8 +187,8 @@
 
 @media screen and (max-width: 768px) {
   .receiveContent {
-    width: 324px;
-    padding: 20px 30px;
+    width: 355px;
+    padding: 20px 20px;
   }
 
   .inputs {
@@ -220,7 +220,7 @@
   }
 
   .generateButton {
-    margin-left: 170px;
+    margin-left: 142px;
   }
 
   .copyParent {
