--- a/app/components/views/TransactionsPage/SendTab/SendForm.module.css
+++ b/app/components/views/TransactionsPage/SendTab/SendForm.module.css
@@ -9,8 +9,8 @@
 }
 .detailsArea {
   width: 318px;
-  height: 186px;
-  padding: 30px 40px 0 0;
+  height: 215px;
+  padding: 30px 20px 0 0;
   font-size: 13px;
   color: var(--account-text);
   display: flex;
@@ -99,7 +99,7 @@
   .detailsArea {
     display: flex;
     width: 340px;
-    height: 85px;
+    height: 147px;
     padding: 30px 20px 30px 0;
   }
   .detailsValueColumn {
